--- a/src/app/components/golf-course-list/golf-course-list.component.html
+++ b/src/app/components/golf-course-list/golf-course-list.component.html
@@ -1,19 +1,22 @@
 <div class="m-4">
     <p-table [value]="golfCourses" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+        [resizableColumns]="true"
+        [(selection)]="selectedGolfCourse"
+        selectionMode="single"
         [tableStyle]="{ 'min-width': '50rem' }"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
         [rowsPerPageOptions]="[10, 25, 50]">
         <ng-template pTemplate="header">
             <tr>
-                <th pSortableColumn="name" style="width:20%">Name <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="location" style="width:20%">Location <p-sortIcon field="location"></p-sortIcon></th>
-                <th pSortableColumn="slopeRating" style="width:20%">Slope Rating <p-sortIcon field="slopeRating"></p-sortIcon></th>
-                <th pSortableColumn="courseRating" style="width:20%">Course Rating <p-sortIcon field="courseRating"></p-sortIcon></th>
-                <th pSortableColumn="par" style="width:20%">Par <p-sortIcon field="par"></p-sortIcon></th>
+                <th pSortableColumn="name" style="width:20%" pResizableColumn>Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="location" style="width:20%" pResizableColumn>Location <p-sortIcon field="location"></p-sortIcon></th>
+                <th pSortableColumn="slopeRating" style="width:20%" pResizableColumn>Slope Rating <p-sortIcon field="slopeRating"></p-sortIcon></th>
+                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Course Rating <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="par" style="width:20%" pResizableColumn>Par <p-sortIcon field="par"></p-sortIcon></th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-golfCourse>
-            <tr>
+            <tr [pSelectableRow]="golfCourse" (click)="onSelectGolfCourse(golfCourse.name)">
                 <td>{{ golfCourse.name }}</td>
                 <td>{{ golfCourse.location }}</td>
                 <td>{{ golfCourse.slopeRating }}</td>
