--- a/src/app/components/golf-course/golf-course.component.html
+++ b/src/app/components/golf-course/golf-course.component.html
@@ -1,1 +1,10 @@
-<p>golf-course works!</p>
+<div class="m-4">
+    <p-card header="Title">
+        <p class="m-0">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae
+            numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse,
+            cupiditate neque
+            quas!
+        </p>
+    </p-card>
+</div>
