--- a/src/app/components/golf-course-components/golf-course-create/golf-course-create.component.html
+++ b/src/app/components/golf-course-components/golf-course-create/golf-course-create.component.html
@@ -2,33 +2,33 @@
     style="text-align: center; max-width: 50rem;margin: auto;margin-top: 3rem;">
     <form >
         <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="name" value="{{golfCourse.name}}">
+            <input type="text" class="form-control" id="name" placeholder="Golf Course Name">
             <label for="name">Golf Course Name</label>
         </div>
         <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="location" value="{{golfCourse.location}}">
+            <input type="text" class="form-control" id="location" placeholder="Location">
             <label for="location">Location</label>
         </div>
         <div class="form-floating mb-2">
-            <input type="number" class="form-control" id="slopeRating" value="{{golfCourse.slopeRating}}">
+            <input type="number" class="form-control" id="slopeRating" placeholder="Slope Rating">
             <label for="slopeRating">Slope Rating</label>
         </div>
         <div class="form-floating mb-2">
-            <input type="number" class="form-control" id="courseRating" value="{{golfCourse.courseRating}}">
+            <input type="number" class="form-control" id="courseRating" placeholder="Course Rating">
             <label for="courseRating">Course Rating</label>
         </div>
         <div class="form-floating mb-2">
-            <input type="number" class="form-control" id="yardage" value="{{golfCourse.yardage}}">
+            <input type="number" class="form-control" id="yardage" placeholder="Yardage">
             <label for="yardage">Yardage</label>
         </div>
         <div class="form-floating mb-2">
-            <input type="number" class="form-control" id="par" value="{{golfCourse.par}}">
+            <input type="number" class="form-control" id="par" placeholder="Par">
             <label for="par">Par</label>
         </div>
         
     </form>
     <div class="col-12">
         <p-button styleClass="p-button-secondary m-2" (click)="onCancel()">Cancel</p-button>
-        <p-button styleClass="m-2" (click)="onSubmit()">Confirm Edit</p-button>
+        <p-button styleClass="m-2" (click)="onSubmit()">Create</p-button>
     </div>
 </div>
