--- a/src/app/components/golfer-components/golfer-list/golfer-list.component.html
+++ b/src/app/components/golfer-components/golfer-list/golfer-list.component.html
@@ -9,13 +9,13 @@
         <ng-template pTemplate="header">
             <tr>
                 <th pSortableColumn="name" style="width:20%" pResizableColumn>Name <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="location" style="width:20%" pResizableColumn>Handicap Index <p-sortIcon field="location"></p-sortIcon></th>
-                <th pSortableColumn="slopeRating" style="width:20%" pResizableColumn>Home Course <p-sortIcon field="slopeRating"></p-sortIcon></th>
-                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 1 <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="handicapIndex" style="width:20%" pResizableColumn>Handicap Index <p-sortIcon field="handicapIndex"></p-sortIcon></th>
+                <th pSortableColumn="homeCourse" style="width:20%" pResizableColumn>Home Course <p-sortIcon field="homeCourse"></p-sortIcon></th>
+                <!-- <th pSortableColumn="" style="width:20%" pResizableColumn>Round 1 <p-sortIcon field="scores[0].total"></p-sortIcon></th>
                 <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 2 <p-sortIcon field="courseRating"></p-sortIcon></th>
                 <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 3 <p-sortIcon field="courseRating"></p-sortIcon></th>
                 <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 4 <p-sortIcon field="courseRating"></p-sortIcon></th>
-                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Total <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Total <p-sortIcon field="courseRating"></p-sortIcon></th> -->
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-golfer>
@@ -23,10 +23,12 @@
                 <td>{{ golfer.name }}</td>
                 <td>{{ golfer.handicapIndex }}</td>
                 <td>{{ golfer.homeCourse }}</td>
-                <td>{{ golfer.scores[0] }}</td>
-                <td>{{ golfer.scores[1] }}</td>
-                <td>{{ golfer.scores[2] }}</td>
-                <td>{{ golfer.scores[3] }}</td>
+
+                <!-- <td *ngIf="golfer.scores[0]">{{ golfer.scores[0].total }}</td>
+                <td *ngIf="golfer.scores[1]">{{ golfer.scores[1].total }}</td>
+                <td *ngIf="golfer.scores[2]">{{ golfer.scores[2].total }}</td>
+                <td *ngIf="golfer.scores[3]">{{ golfer.scores[3].total }}</td>
+                <td *ngIf="golfer.scores[0] && golfer.scores[1] && golfer.scores[2] && golfer.scores[3]">{{ golfer.scores[0].total + golfer.scores[1].total + golfer.scores[2].total + golfer.scores[3].total }}</td> -->
             </tr>
         </ng-template>
     </p-table>
