--- a/src/app/components/golfer-components/golfer/golfer.component.html
+++ b/src/app/components/golfer-components/golfer/golfer.component.html
@@ -1,1 +1,13 @@
-<p>golfer works!</p>
+<div style="text-align: center; max-width: 50rem;margin: auto;margin-top: 1rem;">
+    <p-card header="{{golfer.name}}" subheader="{{golfer.homeCourse}}">
+        <ng-template pTemplate="content">
+            <h4>Handicap Index: {{golfer.handicapIndex}}</h4>
+        </ng-template>
+        <ng-template pTemplate="footer">
+            <p-button (click)="onEditButtonClick()" label="Edit" icon="pi pi-pencil"></p-button>
+            
+            <p-button (click)="onDeleteButtonClick()" label="Delete" icon="pi pi-trash" styleClass="p-button-danger" [style]="{ 'margin-left': '.5em' }"></p-button>
+        </ng-template>
+    </p-card>
+</div>
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
