--- a/src/app/components/golfer-components/golfer-create/golfer-create.component.html
+++ b/src/app/components/golfer-components/golfer-create/golfer-create.component.html
@@ -1,1 +1,22 @@
-<p>golfer-create works!</p>
+<div class="card flex flex-column gap-3 p-4"
+    style="text-align: center; max-width: 50rem;margin: auto;margin-top: 3rem;">
+    <form >
+        <div class="form-floating mb-2">
+            <input type="text" class="form-control" id="name" placeholder="Golfer Name">
+            <label for="name">Golfer Name</label>
+        </div>
+        <div class="form-floating mb-2">
+            <input type="number" class="form-control" id="handicapIndex" placeholder="Handicap Index">
+            <label for="handicapIndex">Handicap Index</label>
+        </div>
+        <div class="form-floating mb-2">
+            <input type="text" class="form-control" id="homeCourse" placeholder="Home Course">
+            <label for="homeCourse">Home Course</label>
+        </div>
+        
+    </form>
+    <div class="col-12">
+        <p-button styleClass="p-button-secondary m-2" (click)="onCancel()">Cancel</p-button>
+        <p-button styleClass="m-2" (click)="onSubmit()">Create</p-button>
+    </div>
+</div>
