--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items">
+<p-menubar [model]="items" [style]="{ 'background-color': 'var(--navBgColor)' }">
     <ng-template pTemplate="start">
         <a href="/">
             <img src="https://th.bing.com/th/id/R.8fe16a822ea8f1b5a374c20670163243?rik=zrK2UYP9%2bGSkGg&riu=http%3a%2f%2fgetdrawings.com%2fvectors%2ftrophy-icon-vector-1.png&ehk=EnFBg93Xzd2gsaLCUxzJXX0VCone%2b%2b1VacD3WZ1T0Co%3d&risl=&pid=ImgRaw&r=0"
