--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+:root{
+    /* Color themes */
+    --fernGreen: #4A7856;
+    --hunterGreen: #345830;
+    --pakistanGreen: #1E3F20;
+    --eerieBlack: #1A1F16;
+    --bgColor: #F3F7F3;
+    --navBgColor: #E6EFE6;
+}
