--- a/src/app/components/golf-course-components/golf-course/golf-course.component.html
+++ b/src/app/components/golf-course-components/golf-course/golf-course.component.html
@@ -13,3 +13,38 @@
     </p-card>
 </div>
 <p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<div class="m-4">
+    <p-table [value]="golfers" *ngIf="golfers.length > 0" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+        [resizableColumns]="true"
+        [(selection)]="selectedGolfer"
+        selectionMode="single"
+        [tableStyle]="{ 'min-width': '50rem' }"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [rowsPerPageOptions]="[10, 25, 50]">
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="name" style="width:20%" pResizableColumn>Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="handicapIndex" style="width:20%" pResizableColumn>Handicap Index <p-sortIcon field="handicapIndex"></p-sortIcon></th>
+                <th pSortableColumn="homeCourse" style="width:20%" pResizableColumn>Home Course <p-sortIcon field="homeCourse"></p-sortIcon></th>
+                <!-- <th pSortableColumn="" style="width:20%" pResizableColumn>Round 1 <p-sortIcon field="scores[0].total"></p-sortIcon></th>
+                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 2 <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 3 <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Round 4 <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Total <p-sortIcon field="courseRating"></p-sortIcon></th> -->
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-golfer >
+            <tr [pSelectableRow]="golfer" (click)="onSelectGolfer(golfer.id)" >
+                <td>{{ golfer.name }}</td>
+                <td>{{ golfer.handicapIndex }}</td>
+                <td>{{ golfer.homeCourse }}</td>
+
+                <!-- <td *ngIf="golfer.scores[0]">{{ golfer.scores[0].total }}</td>
+                <td *ngIf="golfer.scores[1]">{{ golfer.scores[1].total }}</td>
+                <td *ngIf="golfer.scores[2]">{{ golfer.scores[2].total }}</td>
+                <td *ngIf="golfer.scores[3]">{{ golfer.scores[3].total }}</td>
+                <td *ngIf="golfer.scores[0] && golfer.scores[1] && golfer.scores[2] && golfer.scores[3]">{{ golfer.scores[0].total + golfer.scores[1].total + golfer.scores[2].total + golfer.scores[3].total }}</td> -->
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
