Added yaradages to golf course list

--- a/src/app/components/golf-course-components/golf-course-list/golf-course-list.component.html
+++ b/src/app/components/golf-course-components/golf-course-list/golf-course-list.component.html
@@ -12,6 +12,7 @@
                 <th pSortableColumn="location" style="width:20%" pResizableColumn>Location <p-sortIcon field="location"></p-sortIcon></th>
                 <th pSortableColumn="slopeRating" style="width:20%" pResizableColumn>Slope Rating <p-sortIcon field="slopeRating"></p-sortIcon></th>
                 <th pSortableColumn="courseRating" style="width:20%" pResizableColumn>Course Rating <p-sortIcon field="courseRating"></p-sortIcon></th>
+                <th pSortableColumn="yardage" style="width:20%" pResizableColumn>Yardage <p-sortIcon field="yardage"></p-sortIcon></th>
                 <th pSortableColumn="par" style="width:20%" pResizableColumn>Par <p-sortIcon field="par"></p-sortIcon></th>
             </tr>
         </ng-template>
@@ -21,6 +22,7 @@
                 <td>{{ golfCourse.location }}</td>
                 <td>{{ golfCourse.slopeRating }}</td>
                 <td>{{ golfCourse.courseRating }}</td>
+                <td>{{ golfCourse.yardage }}</td>
                 <td>{{ golfCourse.par }}</td>
             </tr>
         </ng-template>
