--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
                     <h1 class="fw-light">... app is in progress ...</h1>
                     <p class="lead fst-italic">The application for tournament administrators. Create golfers, golf
                         courses, and
-                        tournament leaderboards to make managing your next golf tournemnt simple and easy!</p>
+                        tournament leaderboards to make managing your next golf tournement simple and easy!</p>
                     <p>
                         <a href="https://www.linkedin.com/in/p-j-parker/" target="_blank"><p-button
                                 icon="pi pi-linkedin" label="Payson Parker"
