--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 3rem;text-align: center;">
+<div class="container">
     <h1>About</h1>
     <p-divider></p-divider>
     <div style="text-align: left;">
