--- a/src/app/components/golfer-components/golfer-edit/golfer-edit.component.html
+++ b/src/app/components/golfer-components/golfer-edit/golfer-edit.component.html
@@ -1,4 +1,4 @@
-<div class="card flex flex-column gap-3 p-4"
+<div class="card flex flex-column gap-3"
     style="text-align: center; max-width: 50rem;margin: auto;margin-top: 3rem;">
     <form >
         <div class="form-floating mb-2">
