--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,22 +1,20 @@
-    <div class="container" style="text-align: center;">
-        <h1 style="padding-top: 3rem;">Welcome to the Golf Leaderboard App!</h1>
-        <section class="py-5 text-center container">
-            <div class="row py-lg-5">
-                <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">... app is in progress ...</h1>
-                    <p class="lead fst-italic">The application for tournament administrators. Create golfers, golf
-                        courses, and
-                        tournament leaderboards to make managing your next golf tournement simple and easy!</p>
-                    <p>
-                        <a href="https://www.linkedin.com/in/p-j-parker/" target="_blank"><p-button
-                                icon="pi pi-linkedin" label="Payson Parker"
-                                styleClass="p-button-raised p-button-rounded m-2"></p-button></a>
-                        <p-button icon="pi pi-info-circle" label="About"
-                            styleClass="p-button-raised p-button-rounded p-button-success m-2"
-                            (click)="navigateToAbout()"></p-button>
-                    </p>
-                </div>
+<div class="container" style="text-align: center;">
+    <h1 style="padding-top: 3rem;">Welcome to the Golf Leaderboard App!</h1>
+    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">... app is in progress ...</h1>
+                <p class="lead fst-italic">The application for tournament administrators. Create golfers, golf
+                    courses, and
+                    tournament leaderboards to make managing your next golf tournement simple and easy!</p>
+                <p>
+                    <a href="https://www.linkedin.com/in/p-j-parker/" target="_blank"><p-button icon="pi pi-linkedin"
+                            label="Payson Parker" styleClass="p-button-raised p-button-rounded m-2"></p-button></a>
+                    <p-button icon="pi pi-info-circle" label="About"
+                        styleClass="p-button-raised p-button-rounded p-button-success m-2"
+                        (click)="navigateToAbout()"></p-button>
+                </p>
             </div>
-        </section>
-    </div>
-
+        </div>
+    </section>
+</div>
